---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error: Non-exhaustive match: missing variant 'B'
  --> test.ny:4:19
